--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-native": "0.72.6",
     "react-native-config": "^1.5.1",
+    "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-redux": "^8.1.3",
+    "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
