--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-native": "0.72.6",
     "react-native-config": "^1.5.1",
     "react-native-flipper": "^0.212.0",
+    "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0"
@@ -33,6 +37,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
