--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
+    "@shopify/flash-list": "^1.6.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
     "react-native-config": "^1.5.1",
+    "react-native-flash-message": "^0.4.2",
     "react-native-flipper": "^0.212.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
@@ -27,7 +31,8 @@
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
     "redux-flipper": "^2.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
