--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
+    "react-native-bootsplash": "^5.0.4",
     "react-native-config": "^1.5.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-flipper": "^0.212.0",
